[package]
name = "hwarang"
version = "0.2.0"
edition = "2021"
description = "Fast HWP document text extractor"
license = "MIT"
authors = ["Lee Wonsup <onesup.lee@gmail.com>"]
repository = "https://github.com/teammilestone/hwarang"
readme = "README.md"
keywords = ["hwp", "hwpx", "hancom", "text-extraction", "korean"]
categories = ["parser-implementations", "text-processing"]

[dependencies]
cfb = "0.14"
flate2 = "1"
byteorder = "1"
thiserror = "2"
aes = "0.8"
ecb = { version = "0.1", features = ["alloc"] }
zip = "2"
quick-xml = "0.37"
rayon = "1"

# CLI-only dependencies
clap = { version = "4", features = ["derive"], optional = true }
anyhow = { version = "1", optional = true }

[features]
default = ["cli"]
cli = ["dep:clap", "dep:anyhow"]

[[bin]]
name = "hwarang"
required-features = ["cli"]

[profile.release]
lto = true
codegen-units = 1
strip = true
